lots of goood things

--- a/sequential/Makefile
+++ b/sequential/Makefile
@@ -1,10 +1,11 @@
 CC=gcc
 AR=ar
-CFLAGS= -Wall -Wno-deprecated -O3 
+CFLAGS= -Wall -O3 
 #CFLAGS= -Wall -Wno-deprecated -g
 LDFLAGS= -lgsl -lgslcblas -lm 
 
-EXECS=order_seq bsearch_seq get_rank_pairs
+EXECS=order_seq bsearch_seq get_rank_pairs get_maped_intervals \
+	  scan_seq brute_force
 
 BED_FILE_OBJS=../lib/bed.o
 SET_FILE_OBJS=../lib/set_intersect.o
@@ -16,10 +17,19 @@ all: $(EXECS)
 bsearch_seq: bsearch_seq.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
 	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
 
+scan_seq: scan_seq.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+
+brute_force: brute_force.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+
 order_seq: order_seq.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
 	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
 
 get_rank_pairs: get_rank_pairs.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+
+get_maped_intervals: get_maped_intervals.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
 	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
 
 %.o: %.cpp
