--- a/sequential/Makefile
+++ b/sequential/Makefile
@@ -1,6 +1,6 @@
 CC=gcc
 AR=ar
-CFLAGS= -Wall -O3 
+CFLAGS= -Wall -g -O3 
 #CFLAGS= -Wall -Wno-deprecated -g
 LDFLAGS= -lgsl -lgslcblas -lm 
 
@@ -9,13 +9,14 @@ EXECS=order_seq bsearch_seq get_rank_pairs get_maped_intervals \
 
 BED_FILE_OBJS=../lib/bed.o
 SET_FILE_OBJS=../lib/set_intersect.o
+TIMER_FILE_OBJS=../lib/timer.o
 
-OBJS=$(BED_FILE_OBJS) $(SET_FILE_OBJS)
+OBJS=$(BED_FILE_OBJS) $(SET_FILE_OBJS) $(TIMER_FILE_OBJS)
 
 all: $(EXECS)
 
-bsearch_seq: bsearch_seq.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
-	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+bsearch_seq: bsearch_seq.o $(BED_FILE_OBJS) $(SET_FILE_OBJS) $(TIMER_FILE_OBJS)
+	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS) $(TIMER_FILE_OBJS)
 
 scan_seq: scan_seq.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
 	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
