got a number of simulations completed

--- a/CUDA/Makefile
+++ b/CUDA/Makefile
@@ -9,13 +9,13 @@ INCLUDE=-I. \
 		-I$(SDK_COMMON_INC) \
 	   	-I$(SDK_SHARED_INC)
 CFLAGS=
-LFLAGS=-fPIC -L/usr/local/cuda/lib64 \
+LFLAGS_A=-fPIC
+LFLAGS_B=-L/usr/local/cuda/lib64 \
 		-L$(SDK_PATH)/C/lib \
 		-L$(SDK_PATH)/C/common/lib/linux \
 		-L$(SDK_PATH)/shared/lib \
 		-lcudart \
-		-lcuda \
-		-lcudpp_x86_64
+		-lcudpp_x86_64 
 
 NVCC_OPTS=-DUNIX -O2
 
@@ -23,32 +23,69 @@ SET_FILE_OBJS=../lib/set_intersect.o
 TIMER_FILE_OBJS=../lib/timer.o
 BED_FILE_OBJS=../lib/bed.o
 
+OBJS= $(SET_FILE_OBJS) $(TIMER_FILE_OBJS) $(BED_FILE_OBJS)
+
 SET_FILE_SRC=../lib/set_intersect.c
 TIMER_FILE_SRC=../lib/timer.c
 BED_FILE_SRC=../lib/bed.c
 
-EXECS=cuda_bsearch
-
-OBJS= $(SET_FILE_OBJS) $(TIMER_FILE_OBJS) $(BED_FILE_OBJS)
 SRC= $(SET_FILE_SRC) $(TIMER_FILE_SRC) $(BED_FILE_SRC)
+
+EXECS=cuda_bsearch \
+	  test_cuda \
+	  num_sim_bsearch_gm_cuda \
+	  num_sim_bsearch_sm_cuda
 
 .SUFFIXES: .c .cpp .cu .o
 
-#cuda_bsearch: radixsort.cu.o random.cu.o cuda_bsearch.cu.o
-cuda_bsearch: radixsort.cu.o random.cu.o cuda_bsearch.cu.o radixsort.o
-	$(CPP) -fPIC -o $@ \
+cuda_bsearch: radixsort.cu.o \
+			  radixsort.o \
+			  random.cu.o \
+			  set_intersect_cuda.cu.o \
+			  cuda_bsearch.cu.o 
+	$(CPP) $(LFLAGS_A) -o $@ \
 		$(SRC) \
-		radixsort.cu.o random.cu.o cuda_bsearch.cu.o radixsort.o\
-		-L/usr/local/cuda/lib64 \
-		-L$(SDK_PATH)/C/lib \
-		-L$(SDK_PATH)/C/common/lib/linux \
-		-L$(SDK_PATH)//shared/lib \
-		-lcudart \
-		-lcudpp_x86_64 \
-		-L/usr/local/cuda/lib64 
+		radixsort.cu.o \
+		random.cu.o \
+		radixsort.o \
+		set_intersect_cuda.cu.o\
+		cuda_bsearch.cu.o \
+		$(LFLAGS_B)
 
+num_sim_bsearch_gm_cuda: radixsort.cu.o \
+			  radixsort.o \
+			  random.cu.o \
+			  set_intersect_cuda.cu.o \
+			  num_sim_bsearch_gm_cuda.cu.o 
+	$(CPP) $(LFLAGS_A) -o $@ \
+		$(SRC) \
+		radixsort.cu.o \
+		random.cu.o \
+		radixsort.o \
+		set_intersect_cuda.cu.o \
+		num_sim_bsearch_gm_cuda.cu.o \
+		$(LFLAGS_B)
 
+num_sim_bsearch_sm_cuda: radixsort.cu.o \
+			  radixsort.o \
+			  random.cu.o \
+			  set_intersect_cuda.cu.o \
+			  num_sim_bsearch_sm_cuda.cu.o 
+	$(CPP) $(LFLAGS_A) -o $@ \
+		$(SRC) \
+		radixsort.cu.o \
+		random.cu.o \
+		radixsort.o \
+		set_intersect_cuda.cu.o \
+		num_sim_bsearch_sm_cuda.cu.o \
+		$(LFLAGS_B)
 
+test_cuda: set_intersect_cuda.cu.o \
+		   test_cuda.cu.o
+	$(CPP) $(LFLAGS_A) -o $@ \
+		set_intersect_cuda.cu.o \
+		test_cuda.cu.o \
+		$(LFLAGS_B)
 
 %.cu.o: %.cu
 	$(NVCC)  $(INCLUDE) -c $< -o $@
@@ -58,7 +95,3 @@ cuda_bsearch: radixsort.cu.o random.cu.o cuda_bsearch.cu.o radixsort.o
 
 clean:
 	rm -f $(EXECS) *.a *.o $(LIBS) $(OBJS)
-
-#g++ -fPIC   -o ../../bin/linux/release/cuda_bsearch obj/x86_64/release/radixsort.cpp.o bed.c set_intersect.c timer.c  obj/x86_64/release/cuda_bsearch.cu.o obj/x86_64/release/radixsort.cu.o obj/x86_64/release/random.cu.o      -L/usr/local/cuda/lib64 -L../../lib -L../../common/lib/linux -L../../../shared//lib -lcudart    -lcudpp_x86_64 -L/usr/local/cuda/lib64 -L../../lib -L../../common/lib/linux -L../../../shared//lib -lcudart -lcutil_x86_64 -lshrutil_x86_64
-
-
