cuda enumeration and omp

--- a/sequential/Makefile
+++ b/sequential/Makefile
@@ -5,7 +5,10 @@ CFLAGS= -Wall -g -O3
 LDFLAGS= -lgsl -lgslcblas -lm 
 
 EXECS=order_seq bsearch_seq get_rank_pairs get_maped_intervals \
-	  scan_seq brute_force
+	  scan_seq brute_force num_sim_bsearch_seq \
+	  enumerate_bsearch_seq \
+	  count_bsearch_seq \
+	  num_sim_scan_seq
 
 BED_FILE_OBJS=../lib/bed.o
 SET_FILE_OBJS=../lib/set_intersect.o
@@ -26,6 +29,12 @@ num_sim_scan_seq: num_sim_scan_seq.o $(OBJS)
 	$(CC) -o $@  $< $(OBJS)
 
 num_sim_bsearch_seq: num_sim_bsearch_seq.o $(OBJS) 
+	$(CC) -o $@  $< $(OBJS)
+
+count_bsearch_seq: count_bsearch_seq.o $(OBJS) 
+	$(CC) -o $@  $< $(OBJS)
+
+enumerate_bsearch_seq: enumerate_bsearch_seq.o $(OBJS) 
 	$(CC) -o $@  $< $(OBJS)
 
 brute_force: brute_force.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
