mpi and omp stuff

--- a/mpi/Makefile
+++ b/mpi/Makefile
@@ -4,17 +4,22 @@ CFLAGS= -Wall -O3
 #CFLAGS= -Wall -Wno-deprecated -g
 LDFLAGS= -lgsl -lgslcblas -lm 
 
-EXECS=order_mpi
+EXECS=order_mpi num_sim_bsearch_mpi
 
 BED_FILE_OBJS=../lib/bed.o
 SET_FILE_OBJS=../lib/set_intersect.o
+TIMER_OBJS=../lib/timer.o
+MT_OBJS=../lib/mt.o
 
-OBJS=$(BED_FILE_OBJS) $(SET_FILE_OBJS)
+OBJS=$(BED_FILE_OBJS) $(SET_FILE_OBJS) $(TIMER_OBJS) $(MT_OBJS)
 
 all: $(EXECS)
 
-order_mpi: order_mpi.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
-	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+#order_mpi: order_mpi.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+	#$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+
+num_sim_bsearch_mpi: num_sim_bsearch_mpi.o $(OBJS)
+	$(CC) -o $@  $< $(OBJS)
 
 %.o: %.cpp
 	$(CC) -c $(CFLAGS) $< -o $@
