--- a/CUDA/Makefile
+++ b/CUDA/Makefile
@@ -40,7 +40,8 @@ EXECS=cuda_bsearch \
 	  enumerate_bsearch_gm_cuda \
 	  count_bsearch_sm_cuda \
 	  num_sim_brute_force_gm_cuda\
-	  num_sim_test
+	  num_sim_test \
+	  count_brute_force_gm_cuda
 
 .SUFFIXES: .c .cpp .cu .o
 
@@ -100,6 +101,21 @@ num_sim_brute_force_gm_cuda: radixsort.cu.o \
 		set_intersect_cuda.cu.o \
 	  	num_sim_brute_force_gm_cuda.cu.o \
 		$(LFLAGS_B)
+
+count_brute_force_gm_cuda: radixsort.cu.o \
+			  radixsort.o \
+			  random.cu.o \
+			  set_intersect_cuda.cu.o \
+			  count_brute_force_gm_cuda.cu.o
+	$(CPP) $(LFLAGS_A) -o $@ \
+		$(SRC) \
+		radixsort.cu.o \
+		random.cu.o \
+		radixsort.o \
+		set_intersect_cuda.cu.o \
+		count_brute_force_gm_cuda.cu.o \
+		$(LFLAGS_B)
+
 
 count_bsearch_gm_cuda: radixsort.cu.o \
 			  radixsort.o \
