--- a/sequential/Makefile
+++ b/sequential/Makefile
@@ -1,17 +1,19 @@
 CC=gcc
 AR=ar
-CFLAGS= -Wall -g -O3 
+#CFLAGS= -Wall -g -O3 
+CFLAGS= -Wall -g
 #CFLAGS= -Wall -Wno-deprecated -g
 LDFLAGS= -lgsl -lgslcblas -lm 
 
 EXECS=order_seq bsearch_seq get_rank_pairs get_maped_intervals \
-	  scan_seq brute_force num_sim_bsearch_seq \
+	  scan_seq count_brute_force_seq num_sim_bsearch_seq \
 	  enumerate_bsearch_seq \
 	  count_bsearch_seq \
 	  count_scan_seq \
+	  count_sweep_seq \
 	  num_sim_scan_seq \
 	  s_e_list \
-	  nc_list \
+	  nc_list 
 
 BED_FILE_OBJS=../lib/bed.o
 SET_FILE_OBJS=../lib/set_intersect.o
@@ -37,14 +39,17 @@ num_sim_bsearch_seq: num_sim_bsearch_seq.o $(OBJS)
 count_bsearch_seq: count_bsearch_seq.o $(OBJS) 
 	$(CC) -o $@  $< $(OBJS)
 
+count_sweep_seq: count_sweep_seq.o $(OBJS) 
+	$(CC) -o $@  $< $(OBJS)
+
 count_scan_seq: count_scan_seq.o $(OBJS) 
 	$(CC) -o $@  $< $(OBJS)
 
 enumerate_bsearch_seq: enumerate_bsearch_seq.o $(OBJS) 
 	$(CC) -o $@  $< $(OBJS)
 
-brute_force: brute_force.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
-	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
+count_brute_force_seq: count_brute_force_seq.o $(OBJS)
+	$(CC) -o $@  $< $(OBJS)
 
 s_e_list: s_e_list.o $(BED_FILE_OBJS) $(SET_FILE_OBJS)
 	$(CC) -o $@  $< $(BED_FILE_OBJS) $(SET_FILE_OBJS)
