--- a/sequential/Makefile
+++ b/sequential/Makefile
@@ -29,6 +29,9 @@ num_sim_bsearch_seq: num_sim_bsearch_seq.o $(OBJS)
 count_bsearch_seq: count_bsearch_seq.o $(OBJS) 
 	$(CC) -o $@  $< $(OBJS)
 
+big_count_bsearch_seq: big_count_bsearch_seq.o $(OBJS) 
+	$(CC) -o $@  $< $(OBJS)
+
 count_sweep_seq: count_sweep_seq.o $(OBJS) 
 	$(CC) -o $@  $< $(OBJS)
 
