--- a/CUDA/Makefile
+++ b/CUDA/Makefile
@@ -37,6 +37,7 @@ EXECS=cuda_bsearch \
 	  num_sim_bsearch_gm_cuda \
 	  num_sim_bsearch_sm_cuda \
 	  count_bsearch_gm_cuda \
+	  big_count_bsearch_gm_cuda \
 	  enumerate_bsearch_gm_cuda \
 	  count_bsearch_sm_cuda \
 	  num_sim_brute_force_gm_cuda\
@@ -130,6 +131,21 @@ count_bsearch_gm_cuda: radixsort.cu.o \
 		set_intersect_cuda.cu.o \
 		count_bsearch_gm_cuda.cu.o \
 		$(LFLAGS_B)
+
+big_count_bsearch_gm_cuda: radixsort.cu.o \
+			  radixsort.o \
+			  random.cu.o \
+			  set_intersect_cuda.cu.o \
+			  big_count_bsearch_gm_cuda.cu.o 
+	$(CPP) $(LFLAGS_A) -o $@ \
+		$(SRC) \
+		radixsort.cu.o \
+		random.cu.o \
+		radixsort.o \
+		set_intersect_cuda.cu.o \
+		big_count_bsearch_gm_cuda.cu.o \
+		$(LFLAGS_B)
+
 
 count_bsearch_sm_cuda: radixsort.cu.o \
 			  radixsort.o \
