omp version of big count

--- a/omp/Makefile
+++ b/omp/Makefile
@@ -8,7 +8,8 @@ LDFLAGS= -lm
 
 EXECS= num_sim_bsearch_omp \
 	  enumerate_bsearch_omp \
-	  count_bsearch_omp
+	  count_bsearch_omp \
+	  big_count_bsearch_omp
 
 BED_FILE_OBJS=../lib/bed.o
 SET_FILE_OBJS=../lib/set_intersect.o
@@ -25,6 +26,9 @@ num_sim_bsearch_omp: num_sim_bsearch_omp.o $(OBJS)
 	$(CC) -fopenmp -o $@  $< $(OBJS) $(LDFLAGS)
 
 count_bsearch_omp: count_bsearch_omp.o $(OBJS) 
+	$(CC) -fopenmp -o $@  $< $(OBJS) $(LDFLAGS)
+
+big_count_bsearch_omp: big_count_bsearch_omp.o $(OBJS) 
 	$(CC) -fopenmp -o $@  $< $(OBJS) $(LDFLAGS)
 
 enumerate_bsearch_omp: enumerate_bsearch_omp.o $(OBJS) 
