--- a/omp/Makefile
+++ b/omp/Makefile
@@ -1,7 +1,7 @@
 CC=gcc
 AR=ar
 #CFLAGS= -fopenmp -Wall -g -O3 
-CFLAGS= -fopenmp -Wall -g
+CFLAGS= -fopenmp -O3
 #CFLAGS= -Wall -Wno-deprecated -g
 #LDFLAGS= -lgsl -lgslcblas -lm 
 LDFLAGS= -lm 
