--- a/CUDA/Makefile
+++ b/CUDA/Makefile
@@ -43,7 +43,8 @@ EXECS=cuda_bsearch \
 	  num_sim_brute_force_gm_cuda\
 	  num_sim_test \
 	  count_brute_force_gm_cuda \
-	  bsearch_gm_cuda
+	  bsearch_gm_cuda \
+	  pre_gm_index_wbsearch_gm_cuda
 
 .SUFFIXES: .c .cpp .cu .o
 
@@ -74,6 +75,21 @@ bsearch_gm_cuda: radixsort.cu.o \
 		set_intersect_cuda.cu.o\
 		bsearch_gm_cuda.cu.o \
 		$(LFLAGS_B)
+
+pre_gm_index_wbsearch_gm_cuda: radixsort.cu.o \
+			  radixsort.o \
+			  random.cu.o \
+			  set_intersect_cuda.cu.o \
+			  pre_gm_index_wbsearch_gm_cuda.cu.o
+	$(CPP) $(LFLAGS_A) -o $@ \
+		$(SRC) \
+		radixsort.cu.o \
+		random.cu.o \
+		radixsort.o \
+		set_intersect_cuda.cu.o\
+		pre_gm_index_wbsearch_gm_cuda.cu.o \
+		$(LFLAGS_B)
+
 
 
 num_sim_bsearch_gm_cuda: radixsort.cu.o \
